fixed beatles index name, fixed doubleage filename

--- a/src/CustomSearchCommandExamples/default/commands.conf
+++ b/src/CustomSearchCommandExamples/default/commands.conf
@@ -4,7 +4,7 @@
 # Doubles the age in the 'age' field
 [doubleage]
 chunked = true
-filename = csc.js
+filename = doubleage.js
 
 # Example Custom Search Command: Stateful
 # adds a field to the results that accumulates the ages for each event
