--- a/src/CustomSearchCommandExamples/bin/package.json
+++ b/src/CustomSearchCommandExamples/bin/package.json
@@ -2,7 +2,7 @@
   "name": "splunk-custom-search-command-examples",
   "version": "1.0.0",
   "description": "Example custom search commands in node.js",
-  "main": "csc.js",
+  "main": "doubleage.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
